# fun

./: .gitmodules  .travis.yml  README.md  fun.cabal
Fun/: Decl.hs  Declarations.hs  Derivation.hs  Environment.hs  Eval.hs  IndType.hs  IndTypes.hs  IndTypes.hs~  Main.hs  Module.hs  Module.hs~  Parser.hs  Patterns.hs  Theories.hs  Theory.hs  TypeChecker.hs  Verification.hs
Fun/Decl/: Error.hs
Fun/Derivation/: Derivation.hs  Error.hs  Monad.hs
Fun/Eval/: Eval.hs  EvalMonad.hs  Help.hs  Interact.hs  Parser.hs  Proof.hs  Rules.hs  Sample.hs
Fun/FunTheories/: Arith.hs  FOL.hs  List.hs  Theories.hs
Fun/FunTypes/: Nat.hs  Nat.hs~
Fun/Module/: Error.hs  Graph.hs
Fun/Parser/: Decl.hs  Import.hs  Internal.hs  Module.hs  Pragma.hs
Fun/TypeChecker/: CallGraph.hs  Expr.hs  Proof.hs  Proof.hs~
Fun/Verification/: Error.hs  Verification.hs
ModuleExamples/: Jeje  Otro  Otrooo  TestModule  TestModule.fun  TestModule1  TestModule1.fun  TestModule2  TestModule3
